SVG object covers CSS background in HTML foreignObject https://bugs.webkit.org/show_bug.cgi?id=58417

Patch by Florin Malita <fmalita@google.com> on 2011-11-10
Reviewed by Simon Fraser.

Source/WebCore:

Test: svg/foreignObject/background-render-phase.html

* rendering/svg/RenderSVGForeignObject.cpp:
(WebCore::RenderSVGForeignObject::paint):

    Paint SVG foreign objects atomically, following the same pattern as
    http://trac.webkit.org/browser/trunk/Source/WebCore/rendering/InlineBox.cpp#L209.

LayoutTests:

* svg/foreignObject/background-render-phase-expected.png: Added.
* svg/foreignObject/background-render-phase-expected.txt: Added.
* svg/foreignObject/background-render-phase.html: Added.

Canonical link: https://commits.webkit.org/88425@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@99862 268f45cc-cd09-0410-ab3c-d52691b4dbfc